--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,21 @@
-# You
-name: "Lana Milanovich"
-email: lana.milanovich@gmail.com
-
-#Social
-github: lanami
-linkedin: lana-milanovich
-facebook: 
-twitter:
+author:
+  name: 'Lana Milanovich'
+  email: lana.milanovich@gmail.com
+  github: lanami
+  linkedin: lana-milanovich
 
 # Site
-title: "Lana Milanovich"
-description: "Really great description"
+title: 'Lana Milanovich'
+description: 'Really great description'
 
 # Configuration
-url: ""
-baseurl: ""
-google_analytics:
+url: ''
+baseurl: ''
+google_analytics: ''
+permalink: pretty
+paginate: 5
 
 # Build
-gems: [octopress-autoprefixer]
+gems: ['octopress-autoprefixer', 'jekyll-paginate']
 markdown: kramdown
 exclude: ['_screenshots', '.gitignore', 'Gemfile', 'Gemfile.lock', 'LICENSE.txt', 'README.md']
